karnc/tests/fixtures/negative/221_signature_requires_body/src/demo.karn
context demo

actor Hook { auth = Signature(secret = "WH", header = "X-Sig") }

service api from http {
  on GET("/hook") by Hook () -> Effect[HttpResult[String]] {
    Ok("ok")
  }
}
